--- a/platform_device_id/android/build.gradle
+++ b/platform_device_id/android/build.gradle
@@ -28,6 +28,13 @@ android {
     namespace 'com.di1shuai.platform_device_id'
     compileSdkVersion 35
 
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_21
+        targetCompatibility JavaVersion.VERSION_21
+    }
+    kotlinOptions {
+        jvmTarget = 21
+    }
     sourceSets {
         main.java.srcDirs += 'src/main/kotlin'
     }
